---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 26/5/25
  Major Features:
    - Added [planet=aquilo].
  Bugfixes:
    - Took destroyer capsules out from trade generation on all planets except [planet=fulgora]. (IT IS BUFFED)
    - Fixed terrain generation bug that deformed hexes on all planets.
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 25/5/25
  Major Features:
    - Added [planet=gleba].
    - Added the Quantum Bazaar.
    - Added the Sentient Spider. (not yet programmed, but a separate entity for now)
  Features:
    - Hex cores can now be upgraded in quality.
    - Items can now be ranked up to the silver, gold, and red star ranks. [img=rank-2] -> [img=rank-3] -> [img=rank-4] -> [img=rank-5]
    - Added unique bonuses for silver, gold, and red star ranks.
    - Added technology to unlock hextreme quality.
    - Added tier 4 modules: hexa modules.
    - Added tier 4 combat robots: demolishers.
    - Added tier 5 belts: hexic.
    - Added tier 5 belt capacity tech.
  Changes:
    - Moved splitters and underground belts to their own subgroups in the crafting menu, making it much easier to find the three belt types (belt, underground, splitter) for each tier in the crafting and item selection menus.
    - Removed tree seeds from trade generation on [planet=nauvis].
    - Removed discharge defense equipment from trade generation on all planets except [planet=fulgora]. (IT IS BUFFED)
  Balancing:
    - Buffed [item=discharge-defense-equipment]. It now functions as a personal tesla turret like Wube Software probably would have originally intended, given that it has always been an electric beam weapon.
    - Buffed [item=destroyer-capsule]. It now functions as a flying tesla turret like Wube Software probably would have originally intended, given that it has always used an electric beam weapon.