@@ -6,6 +6,7 @@ Date: 26/5/25
   Bugfixes:
     - Took destroyer capsules out from trade generation on all planets except [planet=fulgora]. (IT IS BUFFED)
     - Fixed terrain generation bug that deformed hexes on all planets.
+    - Fixed interplanetary value calculation.
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.0
 Date: 25/5/25
